...
        android:id="@+id/img_poster"
        android:layout_width="200dp"
        android:layout_height="240dp"
        android:contentDescription="@string/poster"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/text_overview_label"
        app:layout_constraintEnd_toStartOf="@id/text_tv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_tv_title"
        android:layout_width="wrap_content"
...
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_poster"
        app:layout_constraintTop_toBottomOf="@id/text_tv_title" />

    <TextView
        android:id="@+id/text_first_air"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_poster"
...
